=== 2.1.1 / 2011-02-14

* Fix handling of Shake scripts containing stabilizer nodes with no animation
* Remove underscores from tracker names exported to Syntheyes to prevent spaces from being generated

=== 2.1.0 / 2011-02-08
* Adds PFMatchit import support. Also all PFTrack imported cameras will have a camera name injected into the tracker
* Adds a PFMatchit exporter (PFMatchit only wants cameras with numbers in the name)

=== 2.0.2 / 2011-02-02
* Compatible with Ruby 1.9.2
* Scaler middleware now supports negative scaling factors

=== 2.0.0 / 2011-01-27
* Bugfix for PFTrack exports to contain cross-platform linebreaks (rn instead of n)

=== 1.9.9 / 2010-08-11

* Buffer the parsed trackers on disk or in a stream (all backwards-compatible). Substantially reduces conversion times and memory
  usage on huge files.

=== 1.9.8 / 2010-08-11

* Very minor changes and improvements
* The app will now tell you when you try to feed it an empty file
* Change Synetheyes exports to start with a standard frame and not a keyframe to make 1-frame trackers work
* Adds a flip middleware to mirror a tracked comp

=== 1.9.6 / 2010-06-17

* Support Tracker nodes in Shake scripts that come from an old (ages old!) Shake version
* Only parse channels that are actually relevant in the Flame importer

=== 1.9.5 / 2010-05-17

* More stringently check for trackers in the Shake script importer (helps from recognizing arbitrary variables as trackers)
* Increase the size of the in-mem string export buffer

=== 1.9.4 / 2010-04-16

* Fix the boujou exporter to not crash boujou 5

=== 1.9.3 / 2010-04-15

* Add direct export to boujou feature tracks
* Automatically check for new versions and alert the user that he needs an update
* Add tests for the commandline binary itself

=== 1.9.2 / 2010-04-02

* Fix a crasher when the progress bar was being set higher than 100 percent

=== 1.9.1 / 2010-03-21

* Fix a Pipeline bug introduced with the last version

=== 1.9.0 / 2010-03-21
